Pause audio when another starts

--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ ol {
 
 
 audio::-webkit-media-controls-panel {
-  background-color: #ccffff;
+  background-color: #ccffffff;
   
 }
 audio::-webkit-media-controls-volume-slider {
