--- a/css/style.css
+++ b/css/style.css
@@ -807,7 +807,7 @@ audio::-webkit-media-controls-volume-slider {
 }
 
 .footer-top-section {
-	background: #212121;
+	background: #212121BB;
 	padding-top: 100px;
 	padding-bottom: 70px;
 }
