--- a/style.css
+++ b/style.css
@@ -264,19 +264,36 @@ main, #app {
 @media (max-width: 768px) {
   .menu-toggle { display: block; }
 }
-    .intro img {
-      max-width: 400px;
-      border-radius: 12px;
-      z-index: 100;
-      position: relative;
-      margin-left: 50px;
-    }
-    .content h1 { margin-bottom: 1rem; }
+.intro img {
+  max-width: 400px;
+  border-radius: 12px;
+  z-index: 100;
+  position: relative;
+  margin-left: 50px;
+}
+.content h1 { margin-bottom: 1rem; }
 
-    @keyframes fade {
-      0% { background-image: url('img/faderport.webp'); }
-      100% { background-image: url('img/faderport.webp'); }
-    }
+@keyframes fade {
+  0% { background-image: url('img/faderport.webp'); }
+  100% { background-image: url('img/faderport.webp'); }
+}
+
+@media (max-width: 768px) {
+  .intro {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .intro img {
+    margin: 20px 0 0;
+    max-width: 80%;
+  }
+
+  .intro .content {
+    text-align: center;
+  }
+}
   section:first-of-type {
       padding-top: 0px;
     }
@@ -360,7 +377,7 @@ main, #app {
 }
 .accordion {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: 1rem;
 }
 
