Reorg of images, conversion to webp

--- a/style.css
+++ b/style.css
@@ -274,8 +274,8 @@ main, #app {
 .content h1 { margin-bottom: 1rem; }
 
 @keyframes fade {
-  0% { background-image: url('img/faderport.webp'); }
-  100% { background-image: url('img/faderport.webp'); }
+  0% { background-image: url('img/intro/faderport.webp'); }
+  100% { background-image: url('img/intro/faderport.webp'); }
 }
 
 @media (max-width: 768px) {
